--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -676,7 +676,7 @@
     "                  estimate_residual_variance = TRUE, \n",
     "                  estimate_prior_variance = FALSE,\n",
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
-    "    H1 = var(predict(fitted1)) / var(Y$V6)\n",
+    "    H1 = var(predict(fitted1))/var(Y$V6)\n",
     "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
     "    top_snp_full_sample = colnames(X)[top_pip]\n",
     "    # hsq for removing all the na samples\n",
@@ -689,7 +689,7 @@
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
     "    H2 = var(predict(fitted2)) / var(Y$V6)\n",
     "    # hsq for removing all the na samples and na SNPs\n",
-    "    X3 = X[rownames(X) == Y$name]%>%as.matrix\n",
+    "    X3 = X[rownames(X) == Y$name,]%>%as.matrix\n",
     "    fitted3 = susie(X3, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
