--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -699,8 +699,8 @@
     "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
     "    sumstats <- univariate_regression(X, Y$V6)\n",
     "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
-    "    max(abs(z_scores))\n",
-    "    top_snp = which(abs(z_scores) == max(abs(z_scores)))\n",
+    "    max(abs(z_scores%>%na.omit()))\n",
+    "    top_snp = which(abs(z_scores) == max(abs(z_scores%>%na.omit())))\n",
     "    top_snp\n",
     "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
     "    HH\n",
