--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -679,6 +679,7 @@
     "    H1 = var(predict(fitted1))/var(Y$V6)\n",
     "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
     "    top_snp_full_sample = colnames(X)[top_pip]\n",
+    "    top_snp_full_sample = paste(top_snp_full_sample,collapse = \",\")\n",
     "    # hsq for removing all the na samples\n",
     "    X2 = genos$bed%>%na.omit()\n",
     "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
@@ -704,16 +705,17 @@
     "    top_snp\n",
     "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
     "    HH\n",
+    "    top_snp_naive = colnames(X)[top_snp]\n",
+    "    top_snp_naive = paste(top_snp_naive,collapse = \",\")\n",
     "    # storing all the HSQ\n",
     "    hsq_tbl = tibble(file = \"$[_input[0]:n]\", \n",
     "                    region = \"$[_regions[3]]\",\n",
     "                    hsq_full_sample = H1,\n",
-    "                    top_snp_full_sample = top_snp_full_sample,\n",
+    "                    # top_snp_full_sample = top_snp_full_sample,\n",
     "                    hsq_full_snp = H2,\n",
     "                    hsq_neither = H3,\n",
     "                    hsq_naive = HH,\n",
-    "                    top_snp_naive = colnames(X)[top_snp])\n",
-    "  \n",
+    "                    top_snp_naive = colnames(X)[top_snp_naive])\n",
     "    hsq_tbl%>%write_delim(\"$[_output[0]]\",delim = \"\\t\")\n",
     "    # storing the wgt computed from susie, excluding only the na SNP\n",
     "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
