--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -683,20 +683,22 @@
     "    # hsq for removing all the na samples\n",
     "    X2 = genos$bed%>%na.omit()\n",
     "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
+    "    if(length(X2) != 0){\n",
     "    fitted2 = susie(X2, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
     "                  estimate_prior_variance = FALSE,\n",
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
-    "    H2 = var(predict(fitted2)) / var(Y$V6)\n",
+    "    H2 = var(predict(fitted2)) / var(Y$V6)} else { H2 = \"NA\" }\n",
     "    # hsq for removing all the na samples and na SNPs\n",
     "    X3 = X[rownames(X) == Y$name,]%>%as.matrix\n",
+    "    if(length(X3) != 0){\n",
     "    fitted3 = susie(X3, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
     "                  estimate_prior_variance = FALSE,\n",
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
-    "    H3 = var(predict(fitted3)) / var(Y$V6)\n",
+    "    H3 = var(predict(fitted3)) / var(Y$V6)} else { H3 = \"NA\" }\n",
     "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
     "    sumstats <- univariate_regression(X, Y$V6)\n",
     "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
@@ -715,7 +717,7 @@
     "                    hsq_full_snp = H2,\n",
     "                    hsq_neither = H3,\n",
     "                    hsq_naive = HH,\n",
-    "                    top_snp_naive = colnames(X)[top_snp_naive])\n",
+    "                    top_snp_naive = top_snp_naive)\n",
     "    hsq_tbl%>%write_delim(\"$[_output[0]]\",delim = \"\\t\")\n",
     "    # storing the wgt computed from susie, excluding only the na SNP\n",
     "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
