--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -691,7 +691,7 @@
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
     "    H2 = var(predict(fitted2)) / var(Y$V6)} else { H2 = \"NA\" }\n",
     "    # hsq for removing all the na samples and na SNPs\n",
-    "    X3 = X[rownames(X) == Y2$name,]%>%as.matrix\n",
+    "    X3 = X[rownames(X) %in% Y2$name,]%>%as.matrix\n",
     "    if(length(X3) > 0){\n",
     "    fitted3 = susie(X3, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
