--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -683,7 +683,7 @@
     "    # hsq for removing all the na samples\n",
     "    X2 = genos$bed%>%na.omit()\n",
     "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
-    "    if(length(X2) > 0){\n",
+    "    if(!is.na(var(Y2$V6))){\n",
     "    fitted2 = susie(X2, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
@@ -692,7 +692,7 @@
     "    H2 = var(predict(fitted2)) / var(Y$V6)} else { H2 = \"NA\" }\n",
     "    # hsq for removing all the na samples and na SNPs\n",
     "    X3 = X[rownames(X) %in% Y2$name,]%>%as.matrix\n",
-    "    if(length(X3) > 0){\n",
+    "    if(length(X3) > 0 & !is.na(var(Y2$V6))){\n",
     "    fitted3 = susie(X3, Y2$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
