save model for each

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -655,7 +655,8 @@
     "[susie_3]\n",
     "input:  group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
-    "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt'\n",
+    "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt',\n",
+    "        f'{wd:a}/susie/{_input[0]:bn}.susie.model.RData'\n",
     "parameter: causal_variables_L = 10\n",
     "parameter: scaled_prior_variance = 0.1\n",
     "import os\n",
@@ -713,7 +714,7 @@
     "    hsq_tbl = tibble(file = \"$[_input[0]:n]\", \n",
     "                    region = \"$[_regions[3]]\",\n",
     "                    hsq_full_sample = H1,\n",
-    "                    # top_snp_full_sample = top_snp_full_sample,\n",
+    "                    top_snp_full_sample = top_snp_full_sample,\n",
     "                    hsq_full_snp = H2,\n",
     "                    hsq_neither = H3,\n",
     "                    hsq_naive = HH,\n",
@@ -722,6 +723,10 @@
     "    # storing the wgt computed from susie, excluding only the na SNP\n",
     "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
     "    susie_wgt%>%write_delim(\"$[_output[1]]\",delim = \"\\t\")\n",
+    "    # Save the model for future use\n",
+    "    save(fitted1, file=\"$[_output[2]]\")\n",
+    "    # Save a plot for the Z-score\n",
+    "    \n",
     "#Create all_hsq for susie\n",
     "[susie_4]\n",
     "input: group_by = \"all\"\n",
