--- a/Analysis/ROSMAP_TWAS/Data description.ipynb
+++ b/Analysis/ROSMAP_TWAS/Data description.ipynb
@@ -30,11 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "kernel": "SoS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "File contains parsing errors: \n",
+      "\t[line  2]: cd /mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink\n",
+      "wc *.fam\n",
+      "# For number of SNPs\n",
+      "wc *.bim\n",
+      "\n",
+      "Invalid statements: SyntaxError('invalid syntax', ('<string>', 2, 5, 'wc *.fam\\n'))\n"
+     ]
+    }
+   ],
    "source": [
     "cd /mnt/mfs/ctcn/datasets/rosmap/wgs/ampad/variants/snvCombinedPlink\n",
     "# For number of samples\n",
@@ -44,12 +58,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "kernel": "SoS"
    },
-   "outputs": [],
    "source": [
     "### Genome type list\n",
     "The genome type list file is created with the following code. This file provide a diretory for the genotype file that are used for the analysis workflow to run."
@@ -62,9 +74,7 @@
     "kernel": "SoS"
    },
    "outputs": [],
-   "source": [
-    "Due to the issue: https://github.com/cumc/neuro-twas/issues/19 , a symbolic link was created and were used in the genotype_list file."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
