--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -396,7 +396,7 @@
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
     "        f'{wd:a}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout'\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    # Get the line number for the region in the file\n",
     "    line_num = system(\"awk '($$[region_name]==\\\"$[_regions[3]]\\\") {print NR}' $[_input]\", intern=T)\n",
     "    if (length(line_num) == 0){\n",
@@ -713,6 +713,7 @@
     "    # storing all the HSQ\n",
     "    hsq_tbl = tibble(file = \"$[_input[0]:n]\", \n",
     "                    region = \"$[_regions[3]]\",\n",
+    "                    CS_size = fitted1$sets$cs%>%length(),\n",
     "                    hsq_full_sample = H1,\n",
     "                    top_snp_full_sample = top_snp_full_sample,\n",
     "                    hsq_full_snp = H2,\n",
@@ -725,7 +726,6 @@
     "    susie_wgt%>%write_delim(\"$[_output[1]]\",delim = \"\\t\")\n",
     "    # Save the model for future use\n",
     "    save(fitted1, file=\"$[_output[2]]\")\n",
-    "    # Save a plot for the Z-score\n",
     "    \n",
     "#Create all_hsq for susie\n",
     "[susie_4]\n",
