--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -396,7 +396,7 @@
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
     "        f'{wd:a}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout'\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    # Get the line number for the region in the file\n",
     "    line_num = system(\"awk '($$[region_name]==\\\"$[_regions[3]]\\\") {print NR}' $[_input]\", intern=T)\n",
     "    if (length(line_num) == 0){\n",
