--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -639,7 +639,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "## Conducting of susieR test\n",
+    "## Conducting susieR test\n",
     "This step use the susieR packages to recompute the heritability and the weight of the result"
    ]
   },
