--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -254,7 +254,7 @@
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.bed',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.exp'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'        \n",
-    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout'\n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container\n",
     "    # Create merge list\n",
     "    echo '$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
     "    echo '$[next(iter(molecular_pheno[1]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
@@ -268,7 +268,7 @@
     "          --out $[_output[1]:n] \\\n",
     "          --allow-no-sex\n",
     "\n",
-    "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout'\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout', container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"plink2R\")\n",
