--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -263,7 +263,7 @@
     "    # create the merged output X\n",
     "    plink --bfile '$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]'\\\n",
     "          --merge-list $[_output[0]] \\\n",
-    "          --mac 1\n",
+    "          --mac 1 \\\n",
     "          --make-bed \\\n",
     "          --out $[_output[1]:n] \\\n",
     "          --allow-no-sex\n",
