--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -254,7 +254,7 @@
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.bed',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.exp'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'        \n",
-    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container\n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    # Create merge list\n",
     "    echo '$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
     "    echo '$[next(iter(molecular_pheno[1]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
@@ -268,7 +268,7 @@
     "          --out $[_output[1]:n] \\\n",
     "          --allow-no-sex\n",
     "\n",
-    "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout', container = container\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"plink2R\")\n",
@@ -307,17 +307,18 @@
     "parameter: precompute_covariances = \"TRUE\"\n",
     "\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout', container = container\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
     "    library(\"plink2R\")\n",
     "    library(\"mashr\")\n",
     "    library(\"mmbr\")  \n",
     "    # Load data\n",
-    "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\")%>%select(-name)%>%as.matrix()\n",
+    "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")%>%select(-name)%>%as.matrix()\n",
     "    Y_complete_$[_regions[0]] = Y_$[_regions[0]]%>%na.omit()\n",
     "    # Remove NA from bed\n",
-    "    X_$[_regions[0]] = read_plink(\"$[_input[1]]\")$bed\n",
+    "    X_$[_regions[0]] = read_plink(\"$[_input[1]:n]\")$bed%>%t()%>%na.omit()%>%t()\n",
     "    # Get prior\n",
     "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance=cov(Y_complete_$[_regions[0]])), max_mixture_len=-1)\n",
     "    # Mv_susie\n",
