--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -304,7 +304,6 @@
     "[mv_susie_2]\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData'\n",
-    "parameter: precompute_covariances = \"TRUE\"\n",
     "\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
@@ -326,7 +325,7 @@
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
     "                prior_variance=prior_covar,\n",
-    "                residual_variance = var(Y_complete_$[_regions[0]]),precompute_covariances = \"$[precompute_covariances]\")\n",
+    "                residual_variance = var(Y_complete_$[_regions[0]]),precompute_covariances = TRUE)\n",
     "    #Output: hsq not estimated yet\n",
     "    save(m_$[_regions[0]],file = \"$[_output]\")"
    ]
