bug fix & combined

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -314,10 +314,12 @@
     "    library(\"mashr\")\n",
     "    library(\"mmbr\")  \n",
     "    # Load data\n",
-    "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")%>%select(-name)%>%as.matrix()\n",
+    "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")\n",
     "    Y_complete_$[_regions[0]] = Y_$[_regions[0]]%>%na.omit()\n",
     "    # Remove NA from bed\n",
     "    X_$[_regions[0]] = read_plink(\"$[_input[1]:n]\")$bed%>%t()%>%na.omit()%>%t()\n",
+    "    # Reorder Y based on X\n",
+    "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%arrange(match(name,rownames(X_$[_regions[0]])))%>%select(-name)%>%as.matrix()\n",
     "    # Get prior\n",
     "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance=cov(Y_complete_$[_regions[0]])), max_mixture_len=-1)\n",
     "    # Mv_susie\n",
@@ -348,6 +350,27 @@
    },
    "outputs": [],
    "source": [
+    "[mv_susie_3]\n",
+    "output:  f'{wd:a}/.mv.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"tidyr\")\n",
+    "    # Load a template\n",
+    "    region = read_delim($[region_list],delim =\"\\t\")%>%select(ID = `#region` )\n",
+    "    # get the path\n",
+    "    dir = $[_input[0]:d]\n",
+    "    pre = $[name_prefix]\n",
+    "    sur = \".mv_susie.model.RData\"\n",
+    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
+    "    # Load the data\n",
+    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
+    "                            tb_name = map_chr(ID,~paste(collapse = \"\", c(\"m\",.x))),\n",
+    "                             model = map2(env,tb_name , ~get(.y,env = .x)))\n",
+    "    # Save the combined output\n",
+    "    save(output,file = \"$[_output]\")\n",
     "\n"
    ]
   }
