bug fix & combined

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -351,7 +351,8 @@
    "outputs": [],
    "source": [
     "[mv_susie_3]\n",
-    "output:  f'{wd:a}/.mv.RData'\n",
+    "input: group_by = \"all\"\n",
+    "output:  f'{wd:a}/mv.RData'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
