bug fix & combined

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -359,7 +359,7 @@
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
     "    # Load a template\n",
-    "    region = read_delim($[region_list],delim =\"\\t\")%>%select(ID = `#region` )\n",
+    "    region = read_delim(\"$[region_list]\",delim =\"\\t\")%>%select(ID = `#region` )\n",
     "    # get the path\n",
     "    dir = $[_input[0]:d]\n",
     "    pre = $[name_prefix]\n",
