--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -358,6 +358,7 @@
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
     "    # Load a template\n",
     "    region = read_delim(\"$[region_list]\",delim =\"\\t\")%>%select(ID = `#region` )\n",
     "    # get the path\n",
