bug fix & combined

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -362,7 +362,7 @@
     "    # Load a template\n",
     "    region = read_delim(\"$[region_list]\",delim =\"\\t\")%>%select(ID = `#region` )\n",
     "    # get the path\n",
-    "    dir = \"$[_input[0]:d]\"\n",
+    "    dir = \"$[_input[0]:d]/\"\n",
     "    pre = \"$[name_prefix]\"\n",
     "    sur = \".mv_susie.model.RData\"\n",
     "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
