bug fix & combined

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -368,7 +368,7 @@
     "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
     "    # Load the data\n",
     "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                            tb_name = map_chr(ID,~paste(collapse = \"\", c(\"m\",.x))),\n",
+    "                            tb_name = map_chr(ID,~paste(collapse = \"_\", c(\"m\",.x))),\n",
     "                             model = map2(env,tb_name , ~get(.y,env = .x)))\n",
     "    # Save the combined output\n",
     "    save(output,file = \"$[_output]\")\n",
