--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -168,7 +168,7 @@
     "  --molecular_pheno_dir \"molecular_phenotype_list\" \\\n",
     "  --region_list region_list \\\n",
     "  --wd ./ \\\n",
-    "  --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\""
+    "  --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "[global]\n",
     "# Path to a list of molecular phenotypes that are to be analysised, shall contains a cache file within it.\n",
     "parameter: molecular_pheno_dir = path\n",
-    "# An index text file with 4 columns specifying the chr, start, end and names of regions to analyze\n",
+    "\n",
     "parameter: region_list = path\n",
     "# Path to the work directory of this pipeline,where the output will be stored.\n",
     "parameter: wd = path\n",
@@ -202,8 +202,6 @@
     "parameter: job_size = 2\n",
     "# Container option for software to run the analysis: docker or singularity\n",
     "parameter: container = 'gaow/twas'\n",
-    "# List of regions that are shared upon all three diretory\n",
-    "parameter: region_list = path\n",
     "# name prefix of the molecular_pheno\n",
     "parameter: name_prefix = \"chr\"\n",
     "\n",
@@ -303,8 +301,9 @@
    "source": [
     "[mv_susie_2]\n",
     "input: group_by = 3, group_with = 'regions'\n",
-    "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData'\n",
-    "\n",
+    "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData',\n",
+    "         f'{wd:a}/result/{_input[0]:bn}.transformed_XY.RData',\n",
+    "         f'{wd:a}/result/{_input[0]:bn}.mv_wgt.txt'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
@@ -313,23 +312,93 @@
     "    library(\"plink2R\")\n",
     "    library(\"mashr\")\n",
     "    library(\"mmbr\")  \n",
-    "    # Load data\n",
+    "    library(\"flashier\")\n",
+    "    # Define functions\n",
+    "    ###Functions to compute MAF and missing genotype rate\n",
+    "    compute_maf <- function(geno){\n",
+    "      f <- mean(geno,na.rm = TRUE)/2\n",
+    "      return(min(f, 1-f))\n",
+    "    }\n",
+    "    \n",
+    "    compute_missing <- function(geno){\n",
+    "      miss <- sum(is.na(geno))/length(geno)\n",
+    "      return(miss)\n",
+    "    }\n",
+    "    \n",
+    "    mean_impute <- function(geno){\n",
+    "      f <- apply(geno, 2, function(x) mean(x,na.rm = TRUE))\n",
+    "      for (i in 1:length(f)) geno[,i][which(is.na(geno[,i]))] <- f[i]\n",
+    "      return(geno)\n",
+    "    }\n",
+    "    \n",
+    "    is_zero_variance <- function(x) {\n",
+    "      if (length(unique(x))==1) return(T)\n",
+    "      else return(F)\n",
+    "    }\n",
+    "    ### Filter X matrix\n",
+    "    filter_X <- function(X, missing_rate_thresh, maf_thresh) {\n",
+    "      rm_col <- which(apply(X, 2, compute_missing) > missing_rate_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, compute_maf) < maf_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      return(mean_impute(X))\n",
+    "    }\n",
+    "    ###Function to calculate the covariance matrix of Y via flash\n",
+    "    compute_cov_flash <- function(Y, miss=NULL){\n",
+    "      if(is.null(miss)){\n",
+    "        fl <- flashier::flash(Y, var.type = 2, prior.family = c(flashier::prior.normal(), flashier::prior.normal.scale.mix()), backfit = TRUE, verbose.lvl=0)\n",
+    "      } else {\n",
+    "        fl <- flashier::flash(Y[-miss, ], var.type = 2, prior.family = c(flashier::prior.normal(), flashier::prior.normal.scale.mix()), backfit = TRUE, verbose.lvl=0)\n",
+    "      }  \n",
+    "      if(fl$n.factors==0){\n",
+    "        covar <- diag(fl$residuals.sd^2)\n",
+    "      } else {\n",
+    "        fsd <- sapply(fl$fitted.g[[1]], '[[', \"sd\")\n",
+    "        covar <- diag(fl$residuals.sd^2) + crossprod(t(fl$flash.fit$EF[[2]]) * fsd)\n",
+    "      }\n",
+    "      return(covar)\n",
+    "    }\n",
+    "    ###Function to impute the missing X with means and then scale and center X\n",
+    "      impute_and_transform = function(genos){\n",
+    "      tmp = genos\n",
+    "      for(i in 1:ncol(tmp)){\n",
+    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()}\n",
+    "        return(tmp)\n",
+    "      }\n",
+    "  \n",
+    "    # Load X data\n",
+    "    X_$[_regions[0]]_raw = read_plink(\"$[_input[1]:n]\")$bed\n",
+    "    # Filter X by 0.1 NA and 0.01 MAF\n",
+    "    X_$[_regions[0]]_ftr = filter_X(X_$[_regions[0]],0.1,0.01)\n",
+    "    X_$[_regions[0]] = impute_and_transform(X_$[_regions[0]]_ftr)\n",
+    "    # Load Y data\n",
     "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")\n",
-    "    # Remove NA from bed\n",
-    "    X_$[_regions[0]] = read_plink(\"$[_input[1]:n]\")$bed%>%t()%>%na.omit()%>%t()\n",
     "    # Reorder Y based on X\n",
     "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%arrange(match(name,rownames(X_$[_regions[0]])))%>%select(-name)%>%as.matrix()\n",
-    "    Y_complete_$[_regions[0]] = Y_$[_regions[0]]%>%na.omit()\n",
+    "    # Compute the Cov matrix for Y via flashier\n",
+    "    Y_$[_regions[0]]_cov = Y_$[_regions[0]]%>%compute_cov_flash()\n",
+    "    # Impute the missing Y by mean and scale it.\n",
+    "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%impute_and_transform()\n",
     "    # Get prior\n",
-    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance=cov(Y_complete_$[_regions[0]])), max_mixture_len=-1)\n",
+    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1)\n",
     "    # Mv_susie\n",
     "    m_$[_regions[0]] <- msusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
     "                prior_variance=prior_covar,\n",
     "                residual_variance = var(Y_complete_$[_regions[0]]),precompute_covariances = TRUE)\n",
-    "    #Output: hsq not estimated yet\n",
-    "    save(m_$[_regions[0]],file = \"$[_output]\")"
+    "    #Add a hsq sub for the msusie object\n",
+    "    m_$[_regions[0]])$hsq = var(predict(m_$[_regions[0]]))/var(Y_$[_regions[0]])\n",
+    "  \n",
+    "    #Output: hsq estimated\n",
+    "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
+    "    #Output: scaled data\n",
+    "    scaled_$[_regions[0]] = list(X_$[_regions[0]],Y_$[_regions[0]])\n",
+    "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
+    "    #Output: Weight\n",
+    "    m_$[_regions[0]])$coef%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
    ]
   },
   {
@@ -338,7 +407,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "## Merging all the RData file (TBD)\n",
+    "## Merging all the RData file\n",
     "THis step merged the output from  the previous step."
    ]
   },
@@ -372,6 +441,7 @@
     "                             model = map2(env,tb_name , ~get(.y,env = .x)))\n",
     "    # Save the combined output\n",
     "    save(output,file = \"$[_output]\")\n",
+    "\n",
     "\n"
    ]
   }
