--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -202,6 +202,8 @@
     "parameter: job_size = 2\n",
     "# Container option for software to run the analysis: docker or singularity\n",
     "parameter: container = 'gaow/twas'\n",
+    "# List of regions that are shared upon all three diretory\n",
+    "parameter: region_list = path\n",
     "# name prefix of the molecular_pheno\n",
     "parameter: name_prefix = \"chr\"\n",
     "\n",
