--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -306,8 +306,8 @@
     "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.transformed_XY.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.mv_wgt.txt'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
