--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -373,7 +373,7 @@
     "    # Load X data\n",
     "    X_$[_regions[0]]_raw = read_plink(\"$[_input[1]:n]\")$bed\n",
     "    # Filter X by 0.1 NA and 0.01 MAF\n",
-    "    X_$[_regions[0]]_ftr = filter_X(X_$[_regions[0]],0.1,0.01)\n",
+    "    X_$[_regions[0]]_ftr = filter_X(X_$[_regions[0]]_raw,0.1,0.01)\n",
     "    X_$[_regions[0]] = impute_and_transform(X_$[_regions[0]]_ftr)\n",
     "    # Load Y data\n",
     "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")\n",
