--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -384,9 +384,9 @@
     "    # Impute the missing Y by mean and scale it.\n",
     "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%impute_and_transform()\n",
     "    # Get prior\n",
-    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1)\n",
+    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1))\n",
     "    # Mv_susie\n",
-    "    m_$[_regions[0]] <- msusie(X_$[_regions[0]], \n",
+    "    m_$[_regions[0]] = msusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
     "                prior_variance=prior_covar,\n",
