--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -394,7 +394,7 @@
     "                precompute_covariances = TRUE)\n",
     "  \n",
     "    #Add a hsq sub for the msusie object\n",
-    "    m_$[_regions[0]])$hsq = var(predict(m_$[_regions[0]]))/var(Y_$[_regions[0]])\n",
+    "    m_$[_regions[0]]$hsq = var(predict(m_$[_regions[0]]))/var(Y_$[_regions[0]])\n",
     "  \n",
     "    #Output: hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
