--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -402,7 +402,7 @@
     "    scaled_$[_regions[0]] = list(X_$[_regions[0]],Y_$[_regions[0]])\n",
     "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
     "    #Output: Weight\n",
-    "    m_$[_regions[0]])$coef%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
+    "    m_$[_regions[0]]$coef%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
    ]
   },
   {
