--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {
     "kernel": "SoS"
    },
@@ -382,7 +382,6 @@
     "    # Compute the Cov matrix for Y via flashier\n",
     "    Y_$[_regions[0]]_cov = Y_$[_regions[0]]%>%compute_cov_flash()\n",
     "    # Impute the missing Y by mean and scale it.\n",
-    "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%impute_and_transform()\n",
     "    # Get prior\n",
     "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1))\n",
     "    # Mv_susie\n",
@@ -394,16 +393,27 @@
     "                precompute_covariances = TRUE)\n",
     "  \n",
     "    #Add a hsq sub for the msusie object\n",
-    "    m_$[_regions[0]]$hsq = var(predict(m_$[_regions[0]]))/var(Y_$[_regions[0]])\n",
-    "  \n",
+    "    hsq_$[_regions[0]]=rep(0,ncol(Y_$[_regions[0]]))\n",
+    "    for(i in 1:ncol(Y_$[_regions[0]]){\n",
+    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]][,i])/var(Y_$[_regions[0]][,i])}\n",
+    "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]][i]\n",
     "    #Output: hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
     "    #Output: scaled data\n",
     "    scaled_$[_regions[0]] = list(X_$[_regions[0]],Y_$[_regions[0]])\n",
     "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
     "    #Output: Weight\n",
-    "    m_$[_regions[0]]$coef%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
+    "    m_$[_regions[0]]$coef%>%as.tibble()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
