--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -395,7 +395,7 @@
     "    #Add a hsq sub for the msusie object\n",
     "    hsq_$[_regions[0]]=rep(0,ncol(Y_$[_regions[0]]))\n",
     "    for(i in 1:ncol(Y_$[_regions[0]]){\n",
-    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]][,i])/var(Y_$[_regions[0]][,i])}\n",
+    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]][,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
     "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]][i]\n",
     "    #Output: hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
