--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -394,8 +394,8 @@
     "  \n",
     "    #Add a hsq sub for the msusie object\n",
     "    hsq_$[_regions[0]]=rep(0,ncol(Y_$[_regions[0]]))\n",
-    "    for(i in 1:ncol(Y_$[_regions[0]]){\n",
-    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]][,i])/var(Y_$[_regions[0]][,i])}\n",
+    "    for (i in 1:ncol(Y_$[_regions[0]])){\n",
+    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]])[,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
     "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]][i]\n",
     "    #Output: hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
@@ -403,7 +403,7 @@
     "    scaled_$[_regions[0]] = list(X_$[_regions[0]],Y_$[_regions[0]])\n",
     "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
     "    #Output: Weight\n",
-    "    m_$[_regions[0]]$coef%>%as.tibble()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
+    "    m_$[_regions[0]]$coef%>%as.data.frame()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
    ]
   },
   {
