--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -302,6 +302,7 @@
    "outputs": [],
    "source": [
     "[mv_susie_2]\n",
+    "parameter: imputate = \"TRUE\"\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.transformed_XY.RData',\n",
@@ -363,13 +364,19 @@
     "      return(covar)\n",
     "    }\n",
     "    ###Function to impute the missing X with means and then scale and center X\n",
-    "      impute_and_transform = function(genos){\n",
+    "      impute_and_transform = function(genos,impute){\n",
     "      tmp = genos\n",
+    "      if(impute == TRUE){\n",
     "      for(i in 1:ncol(tmp)){\n",
-    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()}\n",
+    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()\n",
+    "  }\n",
     "        return(tmp)\n",
-    "      }\n",
-    "  \n",
+    "      } else {\n",
+    "    for(i in 1:ncol(tmp)){\n",
+    "        tmp[,i]=tmp[,i]%>%scale()}\n",
+    "        return(tmp)\n",
+    "  }\n",
+    "    if ($[_regions[0]] == TRUE){\n",
     "    # Load X data\n",
     "    X_$[_regions[0]]_raw = read_plink(\"$[_input[1]:n]\")$bed\n",
     "    # Filter X by 0.1 NA and 0.01 MAF\n",
@@ -384,6 +391,19 @@
     "    # Impute the missing Y by mean and scale it.\n",
     "    # Get prior\n",
     "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1))\n",
+    "    } else {\n",
+    "    # Load data\n",
+    "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")\n",
+    "    # Remove NA from bed\n",
+    "    X_$[_regions[0]] = read_plink(\"$[_input[1]:n]\")$bed%>%t()%>%na.omit()%>%t()%>%impute_and_transform(impute = FALSE)\n",
+    "    # Reorder Y based on X\n",
+    "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%arrange(match(name,rownames(X_$[_regions[0]])))%>%select(-name)%>%as.matrix()\n",
+    "    Y_complete_$[_regions[0]] = Y_$[_regions[0]]%>%na.omit()\n",
+    "    # Get prior\n",
+    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance=cov(Y_complete_$[_regions[0]])), max_mixture_len=-1)\n",
+    "    # Compute the Cov matrix for Y_complete\n",
+    "    Y_$[_regions[0]]_cov = cov(Y_complete_$[_regions[0]])\n",
+    "  }\n",
     "    # Mv_susie\n",
     "    m_$[_regions[0]] = msusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
@@ -394,8 +414,8 @@
     "  \n",
     "    #Add a hsq sub for the msusie object\n",
     "    hsq_$[_regions[0]]=rep(0,ncol(Y_$[_regions[0]]))\n",
-    "    for(i in 1:ncol(Y_$[_regions[0]]){\n",
-    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]][,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
+    "    for (i in 1:ncol(Y_$[_regions[0]])){\n",
+    "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]])[,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
     "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]][i]\n",
     "    #Output: hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
@@ -403,7 +423,7 @@
     "    scaled_$[_regions[0]] = list(X_$[_regions[0]],Y_$[_regions[0]])\n",
     "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
     "    #Output: Weight\n",
-    "    m_$[_regions[0]]$coef%>%as.tibble()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
+    "    m_$[_regions[0]]$coef%>%as.data.frame()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")"
    ]
   },
   {
