--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -241,25 +241,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "kernel": "SoS"
    },
    "outputs": [],
    "source": [
-    "[mv_susie_1]\n",
-    "\n",
+    "[mv_susie_1,mv_susie_cv_1]\n",
     "input:  molecular_pheno_dir, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged_list',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.bed',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.exp'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'        \n",
-    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
-    "    # Create merge list\n",
-    "    echo '$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
-    "    echo '$[next(iter(molecular_pheno[1]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
-    "    echo '$[next(iter(molecular_pheno[2]))]/cache/$[name_prefix].$[_regions[0]]' >> $[_output[0]]\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'  \n",
+    "\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"plink2R\")\n",
+    "    library(\"purrr\")\n",
+    "    library(\"readr\")\n",
+    "    molecular_pheno = read_delim(\"$[molecular_pheno_dir]\",delim = \"\\t\")\n",
+    "    molecular_pheno = molecular_pheno%>%mutate(dir = map_chr(`#molc_pheno`,~paste(c(`.x`,\"/cache/$[name_prefix].$[_regions[0]]\"),collapse = \"\")))\n",
+    "    n = nrow(molecular_pheno)\n",
+    "    # For every tissues read plink, and extract the fam df.\n",
+    "    genos = tibble( i = 1:n)\n",
+    "    genos = genos%>%mutate(fam = map(i, ~read_plink(molecular_pheno[[.x,2]])$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))%>%select(name,V6)))\n",
     "    \n",
+    "    # Join two tissues\n",
+    "    genos_join_phe_$[_regions[0]] = full_join((genos%>%pull(fam))[[1]],(genos%>%pull(fam))[[2]],by = \"name\")\n",
+    "    \n",
+    "    # If there are more tissues, join the rest\n",
+    "    if(n > 2){\n",
+    "    for(j in 3:n){\n",
+    "    genos_join_phe_$[_regions[0]] = full_join(genos_join_phe_$[_regions[0]],(genos%>%pull(fam))[[j]],by = \"name\")\n",
+    "    }\n",
+    "    }\n",
+    "    genos_join_phe_$[_regions[0]]%>%readr::write_delim(\"$[_output[2]]\",delim = \"\\t\")\n",
+    "    \n",
+    "    # Create merge list\n",
+    "    molecular_pheno[2]%>%readr::write_delim(\"$[_output[0]]\",delim = \"\\t\",col_names=FALSE)\n",
+    "\n",
+    "\n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
+    "\n",
     "    # create the merged output X\n",
     "    plink --bfile '$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]'\\\n",
     "          --merge-list $[_output[0]] \\\n",
@@ -267,20 +291,7 @@
     "          --make-bed \\\n",
     "          --out $[_output[1]:n] \\\n",
     "          --allow-no-sex\n",
-    "\n",
-    "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout',container = container\n",
-    "    library(\"dplyr\")\n",
-    "    library(\"tibble\")\n",
-    "    library(\"plink2R\")\n",
-    "    genos_1_$[_regions[0]] = read_plink(\"$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]\")\n",
-    "    genos_2_$[_regions[0]] = read_plink(\"$[next(iter(molecular_pheno[1]))]/cache/$[name_prefix].$[_regions[0]]\")\n",
-    "    genos_3_$[_regions[0]] = read_plink(\"$[next(iter(molecular_pheno[2]))]/cache/$[name_prefix].$[_regions[0]]\")\n",
-    "    genos_1_$[_regions[0]]_fam = genos_1_$[_regions[0]]$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))%>%select(name,V6)\n",
-    "    genos_2_$[_regions[0]]_fam = genos_2_$[_regions[0]]$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))%>%select(name,V6)\n",
-    "    genos_3_$[_regions[0]]_fam = genos_3_$[_regions[0]]$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))%>%select(name,V6)\n",
-    "    genos_join_phe_$[_regions[0]] = full_join(genos_1_$[_regions[0]]_fam,genos_2_$[_regions[0]]_fam,by = \"name\")\n",
-    "    genos_join_phe_$[_regions[0]] = full_join(genos_join_phe_$[_regions[0]],genos_3_$[_regions[0]]_fam,by = \"name\")\n",
-    "    genos_join_phe_$[_regions[0]]%>%readr::write_delim(\"$[_output[2]]\",delim = \"\\t\")"
+    "\n"
    ]
   },
   {
@@ -301,8 +312,10 @@
    },
    "outputs": [],
    "source": [
-    "[mv_susie_2]\n",
-    "parameter: imputate = \"TRUE\"\n",
+    "[mv_susie_2,mv_susie_cv_2]\n",
+    "# Whether impute the missing values\n",
+    "parameter: impute = \"TRUE\"\n",
+    "\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.transformed_XY.RData',\n",
@@ -316,6 +329,7 @@
     "    library(\"mashr\")\n",
     "    library(\"mmbr\")  \n",
     "    library(\"flashier\")\n",
+    "    library(\"modelr\")\n",
     "    # Define functions\n",
     "    ###Functions to compute MAF and missing genotype rate\n",
     "    compute_maf <- function(geno){\n",
@@ -364,19 +378,17 @@
     "      return(covar)\n",
     "    }\n",
     "    ###Function to impute the missing X with means and then scale and center X\n",
-    "      impute_and_transform = function(genos,impute){\n",
+    "      impute_and_transform = function(genos,impute = TRUE){\n",
     "      tmp = genos\n",
     "      if(impute == TRUE){\n",
     "      for(i in 1:ncol(tmp)){\n",
-    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()\n",
-    "  }\n",
+    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()}\n",
     "        return(tmp)\n",
     "      } else {\n",
     "    for(i in 1:ncol(tmp)){\n",
     "        tmp[,i]=tmp[,i]%>%scale()}\n",
-    "        return(tmp)\n",
-    "  }\n",
-    "    if ($[_regions[0]] == TRUE){\n",
+    "        return(tmp)}}\n",
+    "    if ($[impute] == TRUE){\n",
     "    # Load X data\n",
     "    X_$[_regions[0]]_raw = read_plink(\"$[_input[1]:n]\")$bed\n",
     "    # Filter X by 0.1 NA and 0.01 MAF\n",
@@ -400,24 +412,24 @@
     "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%arrange(match(name,rownames(X_$[_regions[0]])))%>%select(-name)%>%as.matrix()\n",
     "    Y_complete_$[_regions[0]] = Y_$[_regions[0]]%>%na.omit()\n",
     "    # Get prior\n",
-    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance=cov(Y_complete_$[_regions[0]])), max_mixture_len=-1)\n",
     "    # Compute the Cov matrix for Y_complete\n",
-    "    Y_$[_regions[0]]_cov = cov(Y_complete_$[_regions[0]])\n",
-    "  }\n",
-    "    # Mv_susie\n",
+    "    Y_$[_regions[0]]_cov = cov(Y_complete_$[_regions[0]])}\n",
+    "   \n",
+    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1))\n",
     "    m_$[_regions[0]] = msusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
     "                prior_variance=prior_covar,\n",
     "                residual_variance = Y_$[_regions[0]]_cov,\n",
     "                precompute_covariances = TRUE)\n",
-    "  \n",
+    " \n",
     "    #Add a hsq sub for the msusie object\n",
     "    hsq_$[_regions[0]]=rep(0,ncol(Y_$[_regions[0]]))\n",
     "    for (i in 1:ncol(Y_$[_regions[0]])){\n",
     "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]])[,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
-    "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]][i]\n",
-    "    #Output: hsq estimated\n",
+    "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]]\n",
+    "        \n",
+    "    #Output: model with hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
     "    #Output: scaled data\n",
     "    scaled_$[_regions[0]] = list(X_$[_regions[0]],Y_$[_regions[0]])\n",
@@ -427,11 +439,144 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "kernel": "SoS"
    },
+   "source": [
+    "## Perform Crossvalidation and stored the relevent matrixs\n",
+    "This step load the scaled X,Y output from the previouse step, perform CV, and calculate the diagnosis paramters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[mv_susie_cv_3]\n",
+    "# propotion of samples set into testing, set to zero if no cv are needed.\n",
+    "parameter: testing_prop = 0.2\n",
+    "# Number of training & testing samples used\n",
+    "parameter: cv_times = 100\n",
+    "input: group_by = 3, group_with = 'regions'\n",
+    "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.cv.RData',\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"plink2R\")\n",
+    "    library(\"mashr\")\n",
+    "    library(\"mmbr\")  \n",
+    "    library(\"flashier\")\n",
+    "    library(\"purrr\")\n",
+    "    library(\"modelr\")\n",
+    "    \n",
+    "    # Define functions\n",
+    "    compute_cov_flash <- function(Y, miss=NULL){\n",
+    "      if(is.null(miss)){\n",
+    "        fl <- flashier::flash(Y, var.type = 2, prior.family = c(flashier::prior.normal(), flashier::prior.normal.scale.mix()), backfit = TRUE, verbose.lvl=0)\n",
+    "      } else {\n",
+    "        fl <- flashier::flash(Y[-miss, ], var.type = 2, prior.family = c(flashier::prior.normal(), flashier::prior.normal.scale.mix()), backfit = TRUE, verbose.lvl=0)\n",
+    "      }  \n",
+    "      if(fl$n.factors==0){\n",
+    "        covar <- diag(fl$residuals.sd^2)\n",
+    "      } else {\n",
+    "        fsd <- sapply(fl$fitted.g[[1]], '[[', \"sd\")\n",
+    "        covar <- diag(fl$residuals.sd^2) + crossprod(t(fl$flash.fit$EF[[2]]) * fsd)\n",
+    "      }\n",
+    "      return(covar)\n",
+    "    }\n",
+    "    \n",
+    "    ## Compute rmse function\n",
+    "    compute_rmse = function(raw,fitted){\n",
+    "    rmse = rep(0,ncol(raw))\n",
+    "    for (i in 1:ncol(raw)){\n",
+    "      rmse[i] = ((fitted - raw)[,i])^2%>%mean(na.rm = TRUE)%>%sqrt() \n",
+    "      }\n",
+    "    return(rmse)\n",
+    "    }\n",
+    "    \n",
+    "    ## Compute r2 function\n",
+    "    compute_r2 = function(raw,fitted){\n",
+    "    r2 = rep(0,ncol(raw))\n",
+    "    for (i in 1:ncol(raw)){\n",
+    "      cor(fitted[,n][which(!is.na(raw[,i]))],raw[,i]%>%na.omit())^2\n",
+    "      }\n",
+    "    return(rmse)\n",
+    "    }\n",
+    "    \n",
+    "    \n",
+    "    # Load data\n",
+    "    full_model = attach($[_input[[0]]])$m_$[_regions[0]]\n",
+    "    X = attach($[_input[[1]]])$scaled_$[_regions[0]][[1]]\n",
+    "    Y = attach($[_input[[1]]])$scaled_$[_regions[0]][[2]]\n",
+    "    \n",
+    "    # Merged the X and Y for producing testing and training set for modelr cv\n",
+    "    cv_df_raw = cbind(X,Y)%>%as.tibble() \n",
+    "    cv_df = crossv_mc(cv_df_raw, $[cv_times] ,test = $[testing_prop])%>%mutate(\n",
+    "                           train_X = map(train,~as_tibble(.x)[1:ncol(X)]),\n",
+    "                           train_Y = map(train,~as_tibble(.x)[ncol(X)+1,ncol(X)+ncol(Y)]),\n",
+    "                           test_X = map(test_X,~as_tibble(.x)[1:ncol(X)]),\n",
+    "                           test_Y = map(test,~as_tibble(.x)[ncol(X)+1,ncol(X)+ncol(Y)])\n",
+    "                           )\n",
+    "                           \n",
+    "    # Compute the cov matrix for training set Y based on the choice of imputation                  \n",
+    "                         \n",
+    "    if ($[impute] == TRUE){\n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "    cov = map(~train_Y,.x%>%compute_cov_flash())\n",
+    "    )\n",
+    "    }else{\n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "    cov = map(~train_Y,.x%>%na.omit%>%cov())\n",
+    "    )\n",
+    "    }\n",
+    "    \n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "    \n",
+    "    # Get the prior\n",
+    "    \n",
+    "      prior = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
+    "        create_mash_prior(sample_data = list(X=first,Y=second, residual_variance= third, max_mixture_len=-1,center=F,scale=F))\n",
+    "        )),\n",
+    "        \n",
+    "    # Do msusie\n",
+    "    \n",
+    "      msusie = pmap(list(train_X,train_Y,cov,prior),function(first,second,third,forth)(\n",
+    "        msusie(first,second, L=10, prior_variance=forth,residual_variance = third,precompute_covariances = TRUE)\n",
+    "        )))\n",
+    "    \n",
+    "    # Extract data \n",
+    "    \n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "      weight = map(msusie,~.x$coef),\n",
+    "      test_fitted = map2(msusie,test_X,~predict.mmbr(.x,.y)),\n",
+    "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
+    "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y))\n",
+    "    )\n",
+    "    \n",
+    "    # Calculate metrics\n",
+    "    \n",
+    "    mean_rmse = cv_df%>%pull(rmse)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "    mean_r2 = cv_df%>%pull(r2)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "    \n",
+    "    # Save metrics\n",
+    "    full_model$rmse = mean_rmse\n",
+    "    full_model$r2 = mean_r2\n",
+    "  \n",
+    "    #Output\n",
+    "    save(full_model,file = \"$[_output[0]]\")\n",
+    "    \n",
+    "\n",
+    " \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -474,9 +619,37 @@
     "                            tb_name = map_chr(ID,~paste(collapse = \"_\", c(\"m\",.x))),\n",
     "                             model = map2(env,tb_name , ~get(.y,env = .x)))\n",
     "    # Save the combined output\n",
-    "    save(output,file = \"$[_output]\")\n",
-    "\n",
-    "\n"
+    "    save(output,file = \"$[_output]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[mv_susie_cv_4]\n",
+    "input: group_by = \"all\"\n",
+    "output:  f'{wd:a}/mv.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    # Load a template\n",
+    "    region = read_delim(\"$[region_list]\",delim =\"\\t\")%>%select(ID = `#region` )\n",
+    "    # get the path\n",
+    "    dir = \"$[_input[0]:d]/\"\n",
+    "    pre = \"$[name_prefix]\"\n",
+    "    sur = \".mv_susie.model.cv.RData\"\n",
+    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
+    "    # Load the data\n",
+    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
+    "                            tb_name = map_chr(ID,~paste(collapse = \"_\", c(\"m\",.x))),\n",
+    "                             model = map2(env,tb_name , ~get(.y,env = .x)))\n",
+    "    # Save the combined output\n",
+    "    save(output,file = \"$[_output]\")"
    ]
   }
  ],
